--- a/.github/workflows/rendergit-to-cloudflare.yml
+++ b/.github/workflows/rendergit-to-cloudflare.yml
@@ -56,11 +56,13 @@ jobs:
       - name: Install Cloudflare Wrangler
         run: npm install -g wrangler
 
-      # 步骤7：部署到Cloudflare Pages（核心修复：命令单行书写）
+      # 步骤7：部署到Cloudflare Pages（移除所有无效参数）
       - name: Deploy to Cloudflare Pages
         env:
           CLOUDFLARE_API_TOKEN: ${{ secrets.CLOUDFLARE_API_TOKEN }}
-          CLOUDFLARE_ACCOUNT_ID: ${{ secrets.CLOUDFLARE_ACCOUNT_ID }}
         run: |
-          # 修复：所有参数写在同一行，避免换行导致参数分离
-          wrangler pages deploy ./dist --project-name=rendergit-auto --account-id=$CLOUDFLARE_ACCOUNT_ID --commit-hash=${{ github.sha }} --commit-dirty=true --verbose
+          # 仅保留有效参数：--project-name/--commit-hash/--commit-dirty
+          wrangler pages deploy ./dist \
+            --project-name=rendergit-auto \  # 替换为你的Cloudflare Pages项目名
+            --commit-hash=${{ github.sha }} \
+            --commit-dirty=true
