--- a/.github/workflows/rendergit-to-cloudflare.yml
+++ b/.github/workflows/rendergit-to-cloudflare.yml
@@ -1,6 +1,5 @@
 name: Render & Deploy to Cloudflare Pages
 
-# 触发条件：主分支更新、手动触发、每日定时更新
 on:
   push:
     branches: [main, master]
@@ -17,49 +16,40 @@ jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
     steps:
-      # 1. 克隆仓库
       - name: Checkout Source Code
         uses: actions/checkout@v4
         with:
           fetch-depth: 0
 
-      # 2. 配置 Python 3.11
       - name: Set up Python
         uses: actions/setup-python@v5
         with:
           python-version: '3.11'
 
-      # 3. 安装 uv 包管理器
       - name: Install uv
         run: |
           curl -LsSf https://astral.sh/uv/install.sh | sh
           echo "$HOME/.cargo/bin" >> $GITHUB_PATH
 
-      # 4. 安装 rendergit
       - name: Install rendergit
         run: uv tool install git+https://github.com/karpathy/rendergit
 
-      # 5. 生成静态 HTML（创建 dist 目录）
       - name: Generate Static HTML
         run: |
           mkdir -p ./dist
           uv run rendergit ./ -o ./dist/index.html --no-open
-          # 验证文件生成
           if [ ! -f ./dist/index.html ]; then
             echo "❌ HTML 文件生成失败"
             exit 1
           fi
           echo "✅ HTML 文件生成成功"
 
-      # 6. 安装 Wrangler（固定版本避免兼容问题）
       - name: Install Cloudflare Wrangler
         run: npm install -g wrangler@4.52.1
 
-      # 7. 部署到 Cloudflare Pages（极简命令）
       - name: Deploy to Cloudflare Pages
         env:
           CLOUDFLARE_API_TOKEN: ${{ secrets.CLOUDFLARE_API_TOKEN }}
         run: |
-          # 核心部署命令（替换为你的 Pages 项目名）
-          wrangler pages deploy ./dist --project-name=rendergit-auto
+          wrangler pages deploy ./dist --project-name=rendergit-auto --commit-dirty=true
           echo "✅ 部署完成！访问地址：https://rendergit-auto.pages.dev"
